--- a/index.html
+++ b/index.html
@@ -254,16 +254,6 @@
                 </div>
                 <button>Освободить</button>
             </div>
-            <div class="nav-wrap" id="js-nav-1">
-                <nav class="nav">
-                    <a href="#" class="active">Обзор</a>
-                    <a href="#">Загруженное</a>
-                    <a href="#">Избранное</a>
-                    <a href="#">Подписки</a>
-                    <a href="#">Просмотренное</a>
-                    <a href="#">Не интересное</a>
-                </nav>
-            </div>
             <div class="film-wrap js-masonry js-films-1">
                 <div class="film">
                     <a href="#" class="film__img">
@@ -290,6 +280,82 @@
                         </div>
                     </div>
                 </div>
+                <div class="film">
+                    <a href="#" class="film__img">
+                        <img src="http://placehold.it/190x269" alt="">
+                    </a>
+                    <h2 class="film__title"><a href="#">Пираты Карибского Моря</a></h2>
+                    <div class="film__watch">
+                        <button class="btn">Смотреть</button>
+                        <div class="drop-list-wrap">
+                            <button class="btn-drop-list"></button>
+                            <ul class="film-drop-list">
+                                <li><i class="icon icon_eye-s"></i>Отметить просмотренным</li>
+                                <li><i class="icon icon_file"></i>Открыть в проводнике</li>
+                                <li><i class="icon icon_trash"></i>Удалить</li>
+                            </ul>
+                        </div>
+                        <div class="progress">
+                           <span class="progress__percent">52%</span>
+                            <div class="meter animate">
+                                <span style="width: 52%"><span></span></span>
+                            </div>
+                            <i class="icon icon_pause-2"></i>
+                            <i class="icon icon_del"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="film">
+                    <a href="#" class="film__img">
+                        <img src="http://placehold.it/190x269" alt="">
+                    </a>
+                    <h2 class="film__title"><a href="#">Пираты Карибского Моря</a></h2>
+                    <div class="film__watch">
+                        <button class="btn">Смотреть</button>
+                        <div class="drop-list-wrap">
+                            <button class="btn-drop-list"></button>
+                            <ul class="film-drop-list">
+                                <li><i class="icon icon_eye-s"></i>Отметить просмотренным</li>
+                                <li><i class="icon icon_file"></i>Открыть в проводнике</li>
+                                <li><i class="icon icon_trash"></i>Удалить</li>
+                            </ul>
+                        </div>
+                        <div class="progress">
+                           <span class="progress__percent">52%</span>
+                            <div class="meter animate">
+                                <span style="width: 52%"><span></span></span>
+                            </div>
+                            <i class="icon icon_pause-2"></i>
+                            <i class="icon icon_del"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="film">
+                    <a href="#" class="film__img">
+                        <img src="http://placehold.it/190x269" alt="">
+                    </a>
+                    <h2 class="film__title"><a href="#">Пираты Карибского Моря</a></h2>
+                    <div class="film__watch">
+                        <button class="btn">Смотреть</button>
+                        <div class="drop-list-wrap">
+                            <button class="btn-drop-list"></button>
+                            <ul class="film-drop-list">
+                                <li><i class="icon icon_eye-s"></i>Отметить просмотренным</li>
+                                <li><i class="icon icon_file"></i>Открыть в проводнике</li>
+                                <li><i class="icon icon_trash"></i>Удалить</li>
+                            </ul>
+                        </div>
+                        <div class="progress">
+                           <span class="progress__percent">52%</span>
+                            <div class="meter animate">
+                                <span style="width: 52%"><span></span></span>
+                            </div>
+                            <i class="icon icon_pause-2"></i>
+                            <i class="icon icon_del"></i>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="film">
                     <a href="#" class="film__img">
                         <img src="http://placehold.it/190x269" alt="">
@@ -657,6 +723,16 @@
                     </div>
                     <p class="note">Вы всегда можете добавить новый сериал или посмотреть их в разделе <a href="#">я смотрю</a> вашей фильмотеки.</p>
                 </div> 
+            </div>
+            <div class="nav-wrap" id="js-nav-1">
+                <nav class="nav">
+                    <a href="#" class="active">Обзор</a>
+                    <a href="#">Загруженное</a>
+                    <a href="#">Избранное</a>
+                    <a href="#">Подписки</a>
+                    <a href="#">Просмотренное</a>
+                    <a href="#">Не интересное</a>
+                </nav>
             </div>
             <div class="nav-wrap" id="js-nav-2">
                 <nav class="nav">
