--- a/index.html
+++ b/index.html
@@ -355,7 +355,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="film">
                     <a href="#" class="film__img">
                         <img src="http://placehold.it/190x269" alt="">
@@ -1560,6 +1559,7 @@
             <div class="load-message">Загржуаю фильмы. Подождите, пожалуйста.</div>
             <div class="notific-message">Вы удалили фильм «Пираты Карибского Моря»<i class="icon icon_del-2"></i></div>
         </section>
+        <div class="clr"></div>
     </section>
 </div>
 </body>
