auto width item

--- a/index.html
+++ b/index.html
@@ -417,7 +417,10 @@
                         <div class="series-scroll">
                             <div class="series-scroll__item">
                                 <span class="series-title">1х12. Как я провел лето</span>
-                                <button class="btn">Смотреть</button>
+                                <div class="btn-wrap">
+                                    <button class="btn">Смотреть</button>
+                                    <button class="btn">Смотреть</button>
+                                </div>
                                 <div class="drop-list-wrap">
                                     <button class="btn-drop-list"></button>
                                     <ul class="film-drop-list">
@@ -429,7 +432,10 @@
                             </div>
                             <div class="series-scroll__item">
                                 <span class="series-title">2х12. Как я провел лето</span>
-                                <button class="btn">Смотреть</button>
+                                 <div class="btn-wrap">
+                                    <button class="btn">Смотреть</button>
+                                    <button class="btn">Смотреть</button>
+                                </div>
                                 <div class="drop-list-wrap">
                                     <button class="btn-drop-list"></button>
                                     <ul class="film-drop-list">
