--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="format-detection" content="telephone=no">
     <title>Index</title>
     <link rel="stylesheet" media="screen" href="css/screen.css" >
     <link rel="stylesheet" media="screen" href="css/jquery-ui.css" >
@@ -418,7 +419,6 @@
                             <div class="series-scroll__item">
                                 <span class="series-title">1х12. Как я провел лето</span>
                                 <button class="btn">Смотреть</button>
-                                <button class="btn">Смотреть</button>
                                 <div class="drop-list-wrap">
                                     <button class="btn-drop-list"></button>
                                     <ul class="film-drop-list">
@@ -430,7 +430,6 @@
                             </div>
                             <div class="series-scroll__item">
                                 <span class="series-title">2х12. Как я провел лето</span>
-                                <button class="btn">Смотреть</button>
                                 <button class="btn">Смотреть</button>
                                 <div class="drop-list-wrap">
                                     <button class="btn-drop-list"></button>
@@ -456,6 +455,98 @@
                         </div>
                         <i class="icon icon_prev"></i>
                         <i class="icon icon_next"></i>
+                    </div>
+                    <div class="film__opt">
+                        <span class="film__opt-title">Смотреть фильм</span>
+                        <div class="select-film-opt select_source select">
+                            <span class="select__wrap">Источник:<span>vk.com</span></span>
+                            <ul>
+                                <li>
+                                    <div class="source"> 
+                                        <a href="#"><i class="icon icon_ivi"></i>ivi.ru</a>
+                                        <i class="icon icon_wtf"></i>
+                                    </div>
+                                    <div class="lang">
+                                        <i class="icon icon_rus"></i>
+                                        <span>Язык:  Английский</span>
+                                    </div>
+                                    <div class="quant">
+                                        <span>Качество: </span>
+                                        <i class="icon icon_star-s"></i>
+                                        <i class="icon icon_star-s"></i>
+                                        <i class="icon icon_star-s"></i>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="source"> 
+                                        <a href="#"><i class="icon icon_ex"></i>ivi.ru</a>
+                                        <i class="icon icon_wtf"></i>
+                                    </div>
+                                    <div class="lang">
+                                        <i class="icon icon_rus"></i>
+                                        <span>Язык:  Английский</span>
+                                    </div>
+                                    <div class="quant">
+                                        <span>Качество: </span>
+                                        <i class="icon icon_star-s"></i>
+                                        <i class="icon icon_star-s"></i>
+                                        <i class="icon icon_star-s"></i>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="source"> 
+                                        <a href="#"><i class="icon icon_rutracker"></i>ivi.ru</a>
+                                        <i class="icon icon_wtf"></i>
+                                    </div>
+                                    <div class="lang">
+                                        <i class="icon icon_rus"></i>
+                                        <span>Язык:  Английский</span>
+                                    </div>
+                                    <div class="quant">
+                                        <span>Качество: </span>
+                                        <i class="icon icon_star-s"></i>
+                                        <i class="icon icon_star-s"></i>
+                                        <i class="icon icon_star-s"></i>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="select-film-opt select">
+                            <span class="select__wrap">Язык:<span>Русский</span></span>
+                            <ul>
+                                <li>Русский</li>
+                                <li>...</li>
+                                <li>...</li>
+                                <li>...</li>
+                                <li>...</li>
+                            </ul>
+                        </div>
+                        <div class="select-film-opt select">
+                            <span class="select__wrap">Качество:
+                                <span>
+                                    <i class="icon icon_star-s"></i>
+                                    <i class="icon icon_star-s"></i>
+                                    <i class="icon icon_star-s"></i>
+                                    <i class="icon icon_star-s"></i>
+                                    <i class="icon icon_star-s"></i>
+                                </span>
+                            </span>
+                            <ul>
+                                <li>
+                                    <i class="icon icon_star-s"></i>
+                                </li>
+                                <li>
+                                    <i class="icon icon_star-s"></i>
+                                    <i class="icon icon_star-s"></i>
+                                </li>
+                                <li>...</li>
+                                <li>...</li>
+                                <li>...</li>
+                            </ul>
+                        </div>
+                        <span class="film__size">Размер:  1,6 Гб</span>
+                        <button class="btn-watch">Смотреть онлайн</button>
+                        <button class="btn">Загрузить в фильмотеку</button>
                     </div>
                     <div class="film__more">
                         <button class="btn-more">Еще 13 серий</button>
